--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "MarkdownEditor",
+  "name": "markdown-editor-react",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack --env.mode=production",
+    "build": "webpack --env.mode=development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Denis Shtefan",
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
+    "react-svg-loader": "^3.0.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.35.3",
