--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "core-js": "^3.1.4",
+    "marked": "^0.7.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   },
